--- a/src/components/TopProjects/style.scss
+++ b/src/components/TopProjects/style.scss
@@ -8,9 +8,18 @@
     flex-direction: column;
     justify-content: space-between;
     background-color: #130E31;
-    padding: 2vh 1vw;
+    @media (max-width: 676px) {
+        padding: 2vh 4vw;
+    }
+    padding: 2vh 1.5vw;
     border-radius: 18px;
 
+    .ProjectIntegrants_Container {
+        @media (max-width: 676px) {
+            padding: 0 2vw;
+        }
+    }
+    
     ul {
         margin: 1vh 1.7vw;
     }
